# kabot

./: .gitignore  README.md  kabot.py  kabot.yaml  pyproject.toml  requirements.txt
systemd/: kabot.service
